# prographics

./: .editorconfig  .gitignore  API_MIGRATION_GUIDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dev.md
.github/workflows/: macos-build.yml  windows-build.yml
cmake/: ProGraphicsConfig.cmake.in
docs/: prpd-prps-manual.md
examples/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/01_textured_rect/: TexturedRectWidget.cpp
examples/02_textured_unit/: TexturedUnitWidget.h
examples/03_matrix/: MatrixWidget.cpp  MatrixWidget.h
examples/04_coordinate/: CoordinateWidget.cpp  CoordinateWidget.h
examples/05_control_camera/: ControlCameraWidget.cpp  ControlCameraWidget.h
examples/06_3D_coordinate/: 3DCoordinate.h
examples/coordinate/: TestCoordinate3d.cpp
examples/playground/: PlayGround.cpp
examples/shaders/01_textured_rect/: fragment.glsl  vertex.glsl
examples/shaders/02_textured_unit/: fragment.glsl  vertex.glsl
examples/shaders/03_matrix/: vertex.glsl
examples/shaders/04_coordinate/: fragment.glsl  vertex.glsl
examples/shaders/06_prps/: fragment.glsl  geometry.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
examples/src/01_textured_rect/: TexturedRectWidget.h
examples/src/02_textured_unit/: TexturedUnitWidget.cpp
examples/src/06_3D_coordinate/: 3DCoordinate.cpp
examples/src/coordinate/: TestCoordinate2d.cpp  TestCoordinate2d.h  TestCoordinate3d.cpp  TestCoordinate3d.h
examples/src/performance/: DataProcessor.cpp  DataProcessor.h  PerformanceTest.cpp  PerformanceTest.h
examples/src/playground/: PlayGround.cpp  PlayGround.h
include/prographics/charts/base/: gl_widget.h
include/prographics/charts/coordinate/: axis.h  axis_name.h  axis_ticks.h  coordinate2d.h  coordinate3d.h  grid.h
include/prographics/charts/prpd/: prpd.h
include/prographics/charts/prps/: prps.h
include/prographics/core/graphics/: primitive2d.h  shape3d.h
include/prographics/core/renderer/: text_renderer.cpp  text_renderer.h
include/prographics/utils/: camera.h  gl_error.h  orbit_controls.h  projection.h  utils.h
resources/: shaders.qrc  textures.qrc
src/charts/base/: gl_widget.cpp
src/charts/coordinate/: axis.cpp  axis_name.cpp  axis_ticks.cpp  coordinate2d.cpp  coordinate3d.cpp  grid.cpp
src/charts/prpd/: prpd.cpp
src/charts/prps/: prps.cpp
src/core/graphics/: primitive2d.cpp  shape3d.cpp
src/core/renderer/: text_renderer.cpp
src/utils/: camera.cpp  orbit_controls.cpp  projection.cpp
